# fizzbuzzjazz-twitter-bot

./: .gitignore  .pre-commit-config.yaml  README.md  build_package.sh  install_deployment_dependencies.sh  pyproject.toml
.github/workflows/: cicd.yml
bot/: fizzbuzzjazz.py  lambda_function.py  twitter.py
tests/: test_fizzbuzzjazz.py
